--- a/examples/multiple-apis/index.html
+++ b/examples/multiple-apis/index.html
@@ -52,6 +52,11 @@
           url: 'https://api.apis.guru/v2/specs/instagram.com/1.0.0/swagger.yaml'
         },
         {
+          name: 'InstagramJSON',
+          url: 'https://api.apis.guru/v2/specs/instagram.com/1.0.0/swagger.json'
+        },
+        
+        {
           name: 'Google Calendar',
           url: 'https://api.apis.guru/v2/specs/googleapis.com/calendar/v3/swagger.yaml'
         }
