--- a/examples/multiple-apis/index.html
+++ b/examples/multiple-apis/index.html
@@ -55,7 +55,11 @@
           name: 'InstagramJSON',
           url: 'https://api.apis.guru/v2/specs/instagram.com/1.0.0/swagger.json'
         },
-        
+        {
+          name: 'RippleOSI',
+          url: 'https://raw.githubusercontent.com/RippleOSI/Ripple-Qewd/c3da26c21b3f1dbb159106f13b92622770e6b59c/swagger/swagger.json'
+        },
+                 
         {
           name: 'Google Calendar',
           url: 'https://api.apis.guru/v2/specs/googleapis.com/calendar/v3/swagger.yaml'
